fix z-index in sharelinks

--- a/src/components/ShareLinks/ShareLinks.module.css
+++ b/src/components/ShareLinks/ShareLinks.module.css
@@ -26,6 +26,7 @@
   background-color:white;
   transform: scale(1.05);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 10;
 }
 
 .shareMenu > a {
